# xmms-shell-hack

./: README
xmms-shell/: .cvs  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  commands.c  commands.h  configure  configure.in  eval.c  getline.c  getline.h  xmms-shell.1  xmms-shell.c  xmms-shell.pro
xmms-shell/doc/: Makefile.am  help.html
xmms-shell/include/: Makefile.am  Makefile.in  command.h  config.h.in  eval.h  exception.h  formatter.h  general.h  getline.h  misc.h  output.h  playback.h  playlist.h  script.h  session.h  util.h  volume.h  window.h
xmms-shell/src/: Makefile.am  Makefile.in  command.cc  eval.cc  exception.cc  formatter.cc  general.cc  getline.cc  misc.cc  output.cc  playback.cc  playlist.cc  script.cc  session.cc  util.cc  volume.cc  window.cc  xmms-shell.cc
